--- a/pan_view/index.html
+++ b/pan_view/index.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="css/default.css"> <!--link_tag -->
     <link rel="stylesheet" href="css/onepage-scroll.css"> <!--link_tag -->
     <link rel="stylesheet" href="css/index.css"> <!--link_tag -->
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@3.3.7/dist/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
     <script src="js/jquery.min.js"></script><!--link_tag -->
     <script src="js/jquery.onepage-scroll.min.js"></script><!--link_tag -->
     <script type="text/javascript"> //背景图片滚动
@@ -21,7 +22,7 @@
                 keyboard:false,
                 direction:'horizontal'
             });
-            setTimeout("time_loop_img_scoll(1)",5000);
+            //setTimeout("time_loop_img_scoll(1)",5000);
         });
         function time_loop_img_scoll(index){
             var add = '<section style="width: 100%; height: 100%; position: absolute; top: 0px; left: {1}00%;" data-index="{2}"><div class="bg_can_resize pic_blur" style="position: absolute; background-image: url(img/index/{0}.jpg);z-index: -1;"></div><div id="text_pic" style="height: 100px;width: {3}px;"><img src="img/index/leftquote.png" alt=""><div class="quote_text" style="margin-left: 48px; margin-top: -23px;">{4}</div><img src="img/index/rightquote.png" alt="" style="float: right;margin-top: 10px;"><div class="quote_text" style="margin-left: 83px;">{5}</div></div></section>';
@@ -37,9 +38,19 @@
             setTimeout("time_loop_img_scoll({0})".replace("{0}",index+1),5000);
         }
     </script>
+    <script type="text/javascript">
+        $(document).ready(function(){
+
+            $("#regedit").click(function(){
+                $("#login_main").animate({'margin-left':'400px'});
+                setTimeout(function (){$("#regedit_main").animate({'margin-left':'0px'});},500);
+                
+            });
+        });
+    </script>
 </head>
 <body>
-    <div id="warp" style="min-height: 800px;">
+    <div id="warp" style="min-height: 800px;min-width: 800px;">
         <div class="pic_scoll">
             <section style="width: 100%; height: 100%;">
                 <div class="bg_can_resize pic_blur" style="position: absolute; background-image: url(img/index/0.jpg);z-index: -1;"></div>
@@ -52,8 +63,42 @@
             </section>
             <!-- 修改这里代码需要改js的才能生效 -->
         </div>
-        <div style="position: absolute;left: 0px;top: 0px;">
-            <!-- 没用 -->
+        <div id="mask" style="width: 400px;height: 400px;border-radius: 10px;"> <!--主登录界面-->
+            <div id="login_main" style="position: absolute; margin-left: 0px;">
+                <center>
+                    <div style="font-size: 35px;margin-top: 15px;">登录</div>
+                </center>
+                <div style="margin-top: 30px;">
+                    <span class="login_span">账号:</span>
+                    <input type="text" class="form-control" placeholder="用户名" aria-describedby="basic-addon1" style="display: inline;width: 340px;">
+                </div>
+                <div style="margin-top: 5px;">
+                    <span class="login_span">密码:</span>
+                    <input type="password" class="form-control" placeholder="密码" aria-describedby="basic-addon1" style="display: inline;width: 340px;">
+                </div>
+                <div style="margin-top: 10px;"> 
+                    <button type="button" class="btn btn-primary" style="width:379px;height: 40px;">立刻登录</button>
+                </div>
+                <div style="margin-top: 10px;">
+                    <button type="button" class="btn btn-info" style="width: 379px;height: 40px;" id="regedit">没有账号? &nbsp;&nbsp;马上注册！</button>
+                </div>
+            </div>
+            <div id="regedit_main" style="position: absolute; margin-left: -400px;">
+                <center>
+                    <div style="font-size: 35px;margin-top: 15px;">注册</div>
+                </center>
+                <div style="margin-top: 30px;">
+                    <span class="login_span">账号:</span>
+                    <input type="text" class="form-control" placeholder="用户名" aria-describedby="basic-addon1" style="display: inline;width: 340px;">
+                </div>
+                <div style="margin-top: 5px;">
+                    <span class="login_span">密码:</span>
+                    <input type="password" class="form-control" placeholder="密码" aria-describedby="basic-addon1" style="display: inline;width: 340px;">
+                </div>
+                <div style="margin-top: 10px;"> 
+                    <button type="button" class="btn btn-success" style="width:379px;height: 40px;">注册</button>
+                </div>
+            </div>
         </div>
     </div>
 </body>
