--- a/pan_view/login.html
+++ b/pan_view/login.html
@@ -41,7 +41,7 @@
     <script type="text/javascript">
         $(document).ready(function(){
 
-            $("#regedit").click(function(){
+            $("#to_regedit").click(function(){
                 $("#login_main").animate({'margin-left':'400px'});
                 setTimeout(function (){$("#regedit_main").animate({'margin-left':'0px'});},500);
                 
@@ -80,7 +80,7 @@
                     <button type="button" class="btn btn-primary" style="width:379px;height: 40px;">立刻登录</button>
                 </div>
                 <div style="margin-top: 10px;">
-                    <button type="button" class="btn btn-info" style="width: 379px;height: 40px;" id="regedit">没有账号? &nbsp;&nbsp;马上注册！</button>
+                    <button type="button" class="btn btn-info" style="width: 379px;height: 40px;" id="to_regedit">没有账号? &nbsp;&nbsp;马上注册！</button>
                 </div>
             </div>
             <div id="regedit_main" style="position: absolute; margin-left: -400px;">
