--- a/pan_view/file.html
+++ b/pan_view/file.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="stylesheet" href="css/default.css"> <!--link_tag -->
-    <link rel="stylesheet" href="css/main.css"> <!--link_tag -->
+    <link rel="stylesheet" href="css/file.css"> <!--link_tag -->
 
     
     <link rel="stylesheet" href="https://cdn.bootcss.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
@@ -17,7 +17,7 @@
             <div id="title_left"></div>
             <nav class="navbar navbar-expand-lg navbar-light bg-light title_main" style="display: inline-block;padding-left: 0px;padding-bottom: 0px;">
                 <div class="navbar-collapse title_main" id="navbarNav"><!-- 删除collapse-->
-                     <ul class="navbar-nav" style="display: -webkit-box;-webkit-box-orient:unset;">
+                     <ul class="navbar-nav" style="display: -webkit-box;-webkit-box-orient:unset;height: 100%;">
                         <li class="nav-item title_main_item">
                             <a class="nav-link" href="#">文件</a>
                         </li>
