--- a/pan_view/file.html
+++ b/pan_view/file.html
@@ -26,8 +26,8 @@
                         </li>
                     </ul>
                 </div>
+                <div style="display:inline-block;">23</div>
             </nav>
-            
         </div>
     </div>
 </body>
