--- a/pan_view/file.html
+++ b/pan_view/file.html
@@ -12,12 +12,12 @@
     <title>欢迎您,${}!</title>
 </head>
 <body>
-    <div id="warp">
+    <div id="warp" style="min-width: 1100px;">
         <div id="title">
             <div id="title_left"></div>
             <nav class="navbar navbar-expand-lg navbar-light bg-light title_main" style="display: inline-block;padding-left: 0px;padding-bottom: 0px;">
                 <div class="navbar-collapse title_main" id="navbarNav"><!-- 删除collapse-->
-                     <ul class="navbar-nav" style="display: -webkit-box;-webkit-box-orient:unset;height: 100%;">
+                    <ul class="navbar-nav" style="display: -webkit-box;-webkit-box-orient:unset;height: 100%;">
                         <li class="nav-item title_main_item">
                             <a class="nav-link" href="#">文件</a>
                         </li>
@@ -25,8 +25,10 @@
                             <a class="nav-link" href="#">分享</a>
                         </li>
                     </ul>
+                    <div id="title_right">
+                        
+                    </div>
                 </div>
-                <div style="display:inline-block;">23</div>
             </nav>
         </div>
     </div>
