修复导航栏换行

--- a/pan_view/file.html
+++ b/pan_view/file.html
@@ -15,8 +15,8 @@
     <div id="warp" style="min-width: 1100px;">
         <div id="title">
             <div id="title_left"></div>
-            <div class="title_main">
-                <ul class="ul_my" id="ul_title" style="list-style: none;height: 100%;">
+            <div id="title_main">
+                <ul class="ul_my" id="ul_title">
                     <li class="li_left li_title" style="margin-left: 10px;">
                         <a href="#" class="a_block" >文件</a>
                     </li>
@@ -24,6 +24,9 @@
                         <a href="#" class="a_block">分享</a>
                     </li>
                 </ul>
+                <div style="float: right">
+                    4234
+                </div>
             </div>
         </div>
     </div>
