--- a/pan_view/file.html
+++ b/pan_view/file.html
@@ -4,8 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <link rel="stylesheet" href="https://cdn.bootcss.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
-
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@3.3.7/dist/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
     <link rel="stylesheet" href="css/default.css"> <!--link_tag -->
     <link rel="stylesheet" href="css/file.css"> <!--link_tag -->
 
@@ -24,8 +23,10 @@
                         <a href="#" class="a_block">分享</a>
                     </li>
                 </ul>
-                <div style="float: right">
-                    4234
+                <div id="title_right">
+                    <button style="width: 100px;font-size: 100%;">
+                        <span class="glyphicon glyphicon-search" style=""></span>
+                    </button>
                 </div>
             </div>
         </div>
