--- a/pan_view/file.html
+++ b/pan_view/file.html
@@ -58,9 +58,9 @@
 
                             <div id="user_name_animation_main">
                                 <ul class="ul_my" style="list-style: none;">
-                                    <a href="#" class="a_user_name_animation"><li class="user_name_animation_li">个人资料</li></a>
-                                    <a href="#" class="a_user_name_animation"><li class="user_name_animation_li">设置二级密码</li></a>
-                                    <a href="#" class="a_user_name_animation"><li class="user_name_animation_li">退出</li></a>
+                                    <a href="#" class="a_user_name_animation"><li>个人资料</li></a>
+                                    <a href="#" class="a_user_name_animation"><li>设置二级密码</li></a>
+                                    <a href="#" class="a_user_name_animation"><li>退出</li></a>
                                 </ul>
                             </div>
                         </div>
@@ -75,7 +75,6 @@
         <div id="main">
             <div id="main_left">
                 <ul class="ul_my ul_left">
-                    <!-- 有时间重构下,a写在外面加上display: block; 可以对box内背景操作 -->
                     <a href="#" class="li_left"><li style="font-size: 20px;"><span class="glyphicon glyphicon-folder-open"></span> 全部文件</li></a>
                     <li>图片</li>
                     <li>视频</li>
