--- a/pan_view/file.html
+++ b/pan_view/file.html
@@ -154,14 +154,14 @@
                 </div>
 
                 <div style="height: 20px;margin-top: 5px;">
-                    <div class="file_left">
+                    <div id="filehead_left">
                         <input type="checkbox">
                         <span class="span_file_attr">文件名</span>
                     </div>
-                    <div class="file_mid">
+                    <div id="filehead_mid">
                         <span class="span_file_attr">大小</span>
                     </div>
-                    <div class="file_right">
+                    <div id="filehead_right">
                         <span class="span_file_attr">修改日期</span>
                     </div>
                 </div>
@@ -170,7 +170,7 @@
                         <tr class="file_tr">
                             <td class="file_left">
                                 <input type="checkbox" name="" id="">
-                                <img src="img/file/folder.png" class="file_img">
+                                <img src="img/file/file_ico/folder.png" class="file_img">
                                 <span class="file_name">麻瓜编程2017</span>
                             </td>
                             <td class="file_mid">34</td>
