--- a/pan_view/file.html
+++ b/pan_view/file.html
@@ -12,6 +12,7 @@
 
     <title>在线网盘-全部文件</title>
     <script src="js/jquery.min.js"></script>
+    <script src="js/jquery-checkbox-set.js"></script>
     <script src="js/file.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@3.3.7/dist/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
     
@@ -116,12 +117,20 @@
                             <li><a href="#">上传文件夹</a></li>
                         </ul>
                     </div>
-                    <button type="button" class="btn btn-light button_main_main_top">
+                    <button type="button" class="btn btn-light button_main_main_top" style="border: 1px #C3EAFF solid;">
                         <span class="glyphicon glyphicon-hdd" style="margin-right: 2px;"></span> 新建文件夹
                     </button>
-                    <button type="button" class="btn btn-light button_main_main_top">
-                        <span class="glyphicon glyphicon-cloud-download" style="margin-right: 2px;"></span> 下载
-                    </button>
+                    <div class="btn-group  button_main_main_top" role="group" style="outline: none;">
+                        <button type="button" class="btn btn-default button_main_main_top">
+                            <span class="glyphicon glyphicon-cloud-download" style="margin-right: 2px;"></span>下载
+                        </button>
+                        <button type="button" class="btn btn-default button_main_main_top">
+                            <span class="glyphicon glyphicon-tags" style="margin-right: 2px;"></span>
+                            分享
+                        </button>
+                        <button type="button" class="btn btn-default button_main_main_top">删除</button>
+                        <button type="button" class="btn btn-default button_main_main_top">重命名</button>
+                    </div>
                 </div>
 
                 <div style="padding-right: 20px;padding-left: 20px;">
@@ -136,7 +145,7 @@
 
                 <div style="height: 20px;margin-top: 5px;">
                     <div id="filehead_left">
-                        <input type="checkbox">
+                        <input type="checkbox" id="all_file">
                         <span class="span_file_attr">文件名</span>
                     </div>
                     <div id="filehead_mid">
@@ -148,7 +157,7 @@
                 </div>
                 <div id="file_main">
                     <table id="file_table">
-                        <tr class="file_tr">
+                        <tr class="file_tr" lable="" file_type="">
                             <td class="file_left">
                                 <input type="checkbox" name="" id="">
                                 <img src="img/file/file_ico/folder.png" class="file_img">
